change some codes

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,8 @@ REACT_APP_MAPBOX_TOKEN=pk.eyJ1IjoibW9saGVhZCIsImEiOiJjbWRkZWN0anEwNDlqMmxxdHpvd3
 REACT_APP_API_URL=https://semielevated-svetlana-crescive.ngrok-free.dev
 # REACT_APP_API_URL=http://localhost:8000
 JWT_SECRET=MySuperSecretKey
+DB_HOST=didikaladb
+DB_USER=root
+DB_PASS=xuBYkY42YHKTUeI2g7y7EExX
+DB_NAME=musing_kirch
+DB_PORT=3306
