--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "build": "echo 'No build step for backend'"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,7 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.14.5",
+    "mysql2": "^3.15.3",
     "socket.io": "^4.8.1"
   }
 }
